--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@ Copyright Glen Knowles 2019 - 2022.
 Distributed under the Boost Software License, Version 1.0.
 ////
 
-NOTE: Placeholder only, unimplemented
+NOTE: Placeholder only -- NOT IMPLEMENTED
 
 = dimtsc
 :ci-root: https://github.com/gknowles/dimtsc/actions/workflows/
